fix github pages

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react_films",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://yaspichihin.github.io/react_movies",
+  "homepage": "https://yaspichihin.github.io/react_movies/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
